--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "expo": "54.0.7",
+    "expo-constants": "~18.0.10",
     "expo-font": "~14.0.8",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "nodemailer": "^7.0.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
