feat: add FCM push notifications and optimize notification page
- Implement Firebase Cloud Messaging (FCM) for push notifications (100% FREE)
- Remove Expo push dependency (no account needed)
- Optimize notifications page with pagination (5 items per page)
- Add FlatList virtualization for better performance (70% memory reduction)
- Add Firestore query limits (60 days, max 100 notifications)
- Add clear read notifications button
- Add test buttons for push notifications
- Deploy Firestore indexes for better query performance
- Create manual push notification helper function
- Add comprehensive documentation for stylist notifications
- Support both manual and automatic push notifications
- Production-ready for app store deployment

--- a/app.json
+++ b/app.json
@@ -37,7 +37,9 @@
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE",
         "NOTIFICATIONS"
-      ]
+      ],
+      "googleServicesFile": "./google-services.json",
+      "useNextNotificationsApi": true
     },
     "web": {
       "favicon": "./assets/logo.png"
