--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "expo-device": "~8.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
