feat: Stylist pages UX improvements and consistency updates
- Applied consistent layout across all stylist pages (Appointments, Portfolio, Clients, Earnings, Schedule)
- Removed duplicate titles (ScreenWrapper already provides header)
- Standardized filter and search bar spacing (8px gap)
- Added scroll-to-top on navigation for all pages
- Implemented Cloudinary image upload for portfolio
- Added camera and gallery access for portfolio photos
- Created comprehensive UX analysis documents
- Fixed filter chip padding consistency (10px vertical)
- Added section margin styles for proper spacing
- Removed unused state variables

Changes:
- StylistAppointmentsScreen: Added useFocusEffect for scroll-to-top
- StylistPortfolioScreen: Cloudinary upload, layout consistency
- StylistClientsScreen: Layout consistency, filter/search spacing
- StylistEarningsScreen: Removed duplicate title, layout consistency
- StylistScheduleScreen: Removed duplicate title, layout consistency, removed unused state
- StylistDashboardScreen: Already had scroll-to-top (verified)

Documentation:
- STYLIST_UX_ANALYSIS.md: Comprehensive analysis of all screens
- STYLIST_UX_IMPROVEMENTS_VIEW_ONLY.md: View-only focused improvements
- PORTFOLIO_UPLOAD_IMPLEMENTATION.md: Cloudinary setup guide
- CLOUDINARY_SETUP_GUIDE.md: Detailed Cloudinary configuration
- CLOUDINARY_QUICK_START.md: Quick reference guide

--- a/.gitignore
+++ b/.gitignore
@@ -198,7 +198,7 @@ bundle-analyzer-report.html
 .expo-shared/
 
 # EAS
-eas.json
+# eas.json - Now tracked for team collaboration
 
 # Flipper
 ios/Flipper-Folly/
