--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ EXPO_PUBLIC_API_URL=https://api.davidsalon.com
 
 # Sentry (Optional)
 EXPO_PUBLIC_SENTRY_DSN=your_sentry_dsn_here
+
+# Cloudinary Configuration (for stylist portfolios)
+EXPO_PUBLIC_CLOUDINARY_CLOUD_NAME=your_cloud_name_here
+EXPO_PUBLIC_CLOUDINARY_UPLOAD_PRESET=your_upload_preset_here
+EXPO_PUBLIC_CLOUDINARY_API_KEY=your_api_key_here
